--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,22 @@
  *
  * This generated file contains a sample Java Library project to get you started.
  * For more details take a look at the Java Libraries chapter in the Gradle
- * user guide available at https://docs.gradle.org/5.0/userguide/java_library_plugin.html
+ * user guide available at https://docs.gradle.org/7.2/userguide/java_library_plugin.html
  */
 
 plugins {
-    id 'java'
+    // Apply the java-library plugin to add support for Java Library
+    id 'java-library'
+    id 'eclipse'
+    id 'idea'
 }
 
 repositories {
-    jcenter()
+    // You can declare any Maven/Ivy/file repository here.
+    mavenCentral()
 }
 
 dependencies {
+    // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
 }
